--- a/index.html
+++ b/index.html
@@ -8,81 +8,38 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="flexbox">
     <header>
         <h1>Solomon Vidal</h1>
+        <h2>Web Development 2: Class Portfolio</h2>
+        <h3>Spring 2023</h3>
     </header>
 
-    <img src="images/spiderweb.jpg" alt="RÜŞTÜ BOZKUŞ @ Pixabay">
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="bio.html">Bio</a></li>
+            <li><a href="assignment1/index.html">Assignment 1</a></li>
+            <li><a href="assignment3/index.html">Assignment 3</a></li>
+            <li><a href="assignment4/index.html">Assignment 4</a></li>
+            <li><a href="assignment5/index.html">Assignment 5</a></li>
+            <li><a href="assignment6/index.html">Assignment 6</a></li>
+            <li><a href="final-project/docs/">Topic Proposal</a></li>
+            <li><a href="final-project/docs/">Research Interviews</a></li>
+            <li><a href="final-project/docs/">Creative Exploration</a></li>
+            <li><a href="final-project/docs/">Wireframe + Style Guide</a></li>
+            <li><a href="final-project/docs/">Reflection</a></li>
+            <li><a href="final-project/index.html">Completion</a></li>
+        </ul>
+    </nav>
 
-    <h3>Web Perspective: Silk Connections</h3>
-
-    <p>
-        “Shoot! Hey, Google. What’s the name of the song that goes like ‘California girls…’” web authors are unforgettable. Whether it be Facebook or Google, the two author sites that were mentioned in the article “State of the Web 2019” by former Senior Digital Analyst, Mitch Daniels, or sites like Bing, Yahoo, and, rarely known, Ecosia, web authors have an immeasurable grip, and effect, on tech consumers all around the globe. I believe that web authors can be, as referenced in the article, a double-edged sword that can be good or bad. I also believe that the very feature that makes web authors uniquely good, can be improved upon by giving non-professional web creators equal opportunity as large, and professional, companies.
-    </p>
-
-    <img src="images/apps.jpg" alt="Gerd Altmann @ Pixabay">
-
-    <p>
-        From a business standpoint, web authors are like fertilized soil waiting for seeds to be sown; they provide windows of growth for those who want to popularize their companies and gain the online traction they need to succeed. 
-    </p>
-
-    <img src="images/architecture.jpg" alt="Pexels @ Pixabay">
-
-    <p>
-        As mentioned in the “State of the Web 2019” article, Facebook and Google were able to reach consumers with ads from businesses and political parties catered to them through the usage of data AI. With these specifically provided ads, businesses are able to gain the attention of customers who, otherwise, may have shopped elsewhere and gained their business. Ads, while most consider them annoying to look at, can be potent when shown to the exact person in need of the product. 
-    </p>
-
-    <img src="images/advertisement.jpg" alt="Pexels @ Pixabay">
-
-    <p>
-        Places like Target are able to use this type of data ai to gain consistent buyers because they’re the first store to pop up. Once you shop somewhere once, it prompts you to come back because of consistency and familiarity.
-    </p>
-
-
-    <p>
-        This quick attention grab and consistency contribute to a business's success and annual revenue.
-    </p>
-
-    <p>
-        Business is like social media in the way that the more popular you are, the more people are willing to invest in you.
-    </p>
-
-    <img src="images/network.jpg" alt="Gerd Altmann @ Pixabay">
-
-    <p>
-        Societally, web authors can be exposed to ridicule as the same thing that makes businesses flourish are also capable of gathering data in a way that is intrusive. 
-    </p>
-
-    <p>
-        When you search for something through Google and you end up getting an ad on Facebook that matches your search, it can be brushed off as a joke or helpful, even. But, when you get to the technical aspects of it, the collection of what you search for and/or type is also part of your digital footprint. 
-    </p>
-
-    <p>
-        This creates a disturbance in individual privacy as these quick searches can be given away to unknown clients and companies by the same web authors that helped you look for it. 
-    </p>
-
-    <p>
-        As helpful as AI can be for predicting our needs, its ability to predict runs on our privacy becoming thinner and easily manipulated.
-    </p>
-
-    <img src="images/cctv.jpg" alt="Joseph Mucira @ Pixabay">
-
-    <p>
-        While there are pros and cons to web authors, as there are with most fields, I believe I can add to the pros when I propose that they update guidelines in a way that creates equal opportunity for small web developers as it does large company web developers. With this guideline, there can be a standard for how web authors run and how much data they can obtain from individuals. A new frontier is often a place of entropy; new guidelines are there to not only make the playing field fair, but it can also protect individual safety while ramping up the usage of the web author sites. Like in stocks, people are able to finance stocks as a whole by investing in multiple stocks. More websites and opportunists that are connected to the main web author provide the author with different “stocks” that people interact, with or “invest, in.
-    </p>
-
-    <img src="images/stocks.jpg" alt="Gerd Altmann @ Pixabay">
-
-    <h3>The more, the merrier!</h3>
-
-    <a href="#top" class="back-to-top">&uarr;</a>
-
-    </div>
+    <main>
+        <img src="" alt="">
+        <h3>About this page:</h3>
+        <p>Welcome to Solomon Vidal's portfolio page. This page will contain works and webpages created by me for this class. This will be my opportunity to grow my programming portfolio and hone my skills so that I am able to be a more creative and efficient programmer.</p>
+    </main>
 
     <footer>
-        <h2>&copy; Vidal 2023</h2>
-        <h3>Image Credits to RÜŞTÜ BOZKUŞ, Gerd Altmann, Joseph Mucira, and Pexels @ Pixabay</h3>
+
     </footer>
 </body>
 </html>
