--- a/index.html
+++ b/index.html
@@ -14,32 +14,37 @@
         <h3>Spring 2023</h3>
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="bio.html">Bio</a></li>
-            <li><a href="assignment1/index.html">Assignment 1</a></li>
-            <li><a href="assignment3/index.html">Assignment 3</a></li>
-            <li><a href="assignment4/index.html">Assignment 4</a></li>
-            <li><a href="assignment5/index.html">Assignment 5</a></li>
-            <li><a href="assignment6/index.html">Assignment 6</a></li>
-            <li><a href="final-project/docs/">Topic Proposal</a></li>
-            <li><a href="final-project/docs/">Research Interviews</a></li>
-            <li><a href="final-project/docs/">Creative Exploration</a></li>
-            <li><a href="final-project/docs/">Wireframe + Style Guide</a></li>
-            <li><a href="final-project/docs/">Reflection</a></li>
-            <li><a href="final-project/index.html">Completion</a></li>
-        </ul>
-    </nav>
+    
 
     <main>
         <img src="" alt="">
         <h3>About this page:</h3>
         <p>Welcome to Solomon Vidal's portfolio page. This page will contain works and webpages created by me for this class. This will be my opportunity to grow my programming portfolio and hone my skills so that I am able to be a more creative and efficient programmer.</p>
+
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="bio.html">Bio</a></li>
+                <li><a href="assignment1/index.html">Assignment 1</a></li>
+                <li><a href="assignment3/index.html">Assignment 3</a></li>
+                <li><a href="assignment4/index.html">Assignment 4</a></li>
+                <li><a href="assignment5/index.html">Assignment 5</a></li>
+                <li><a href="assignment6/index.html">Assignment 6</a></li>
+                <li><a href="final-project/docs/">Topic Proposal</a></li>
+                <li><a href="final-project/docs/">Research Interviews</a></li>
+                <li><a href="final-project/docs/">Creative Exploration</a></li>
+                <li><a href="final-project/docs/">Wireframe + Style Guide</a></li>
+                <li><a href="final-project/docs/">Reflection</a></li>
+                <li><a href="final-project/index.html">Completion</a></li>
+            </ul>
+        </nav>
+
+        <br>
+        <br>
     </main>
 
     <footer>
-
+        <h2>&copy; Vidal 2023</h2>
     </footer>
 </body>
 </html>
