--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     
 
     <main>
-        <img src="images/sunsetwindow.jpg" alt="'Sunset Window' Photography by Me">
+        <figure>
+            <img src="images/sunsetwindow.jpg" alt="'Sunset Window' Photography by Me">
+        </figure>
+
         <h3>About this page:</h3>
         <p>Welcome to Gabrielle Vidal's portfolio page. This page will contain works and webpages created by me for this class. This will be my opportunity to grow my programming portfolio and hone my skills so that I am able to be a more creative and efficient programmer.</p>
 
