--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Gabrielle Vidal</h1>
+        <h1>Solomon Vidal</h1>
         <h2>Web Development 2: Class Portfolio</h2>
         <h3>Spring 2023</h3>
     </header>
@@ -22,7 +22,7 @@
         </figure>
 
         <h3>About this page:</h3>
-        <p>Welcome to Gabrielle Vidal's portfolio page. This page will contain works and webpages created by me for this class. This will be my opportunity to grow my programming portfolio and hone my skills so that I am able to be a more creative and efficient programmer.</p>
+        <p>Welcome to Solomon Vidal's portfolio page. This page will contain works and webpages created by me for this class. This will be my opportunity to grow my programming portfolio and hone my skills so that I am able to be a more creative and efficient programmer.</p>
 
         <nav>
             <ul>
