--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -36,6 +36,9 @@
                 <div class="items">
                     <a href="page6.html">Dessert Course</a>
                 </div>
+                <div class="items">
+                    <a href="info.html">More Info</a>
+                </div>
             </div>
             
         </header>
@@ -43,7 +46,7 @@
         <main>
             <br>
 
-            <p class="desktop">This restaurant offers only the rarest of experiences and meals. It's main core is to be experimentative yet delectable.</p>
+            <p class="desktop">This restaurant offers only the rarest of experiences and meals. It's main core is to be experimentative yet delectable. Our mission is to create a place where you can enjoy rare delicacies that you otherwise wouldn't be able to without any consequence. It's an experience of a lifetime because it would likely put you behind bars for a lifetime!</p>
 
             <br>
 
