--- a/assignment3/page3.html
+++ b/assignment3/page3.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moon Course</title>
+    <title>Lovecraft Course 1</title>
     <link rel="stylesheet" href="pages.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Midnight Market: Moon Course</h1>
+            <h1>Midnight Market: Lovecraft Course 1</h1>
 
             <div class="links">
                 <div class="items">
@@ -34,6 +34,9 @@
                 <div class="items">
                     <a href="page6.html">Dessert Course</a>
                 </div>
+                <div class="items">
+                    <a href="info.html">More Info</a>
+                </div>
             </div>
             
         </header>
@@ -46,11 +49,11 @@
         <div class="parent">
             <div class="image">
                 <figure>
-                    <img src="images/celestron.jpeg" alt="Vidal Moon Photography">
+                    <img src="images/nodens.png" alt="Vidal Nodens Illustration">
                 </figure> 
             </div>
             <div class="text">
-              <p>The Moon Course will consist of 5 different moons to partake in. While one of the more expensive options, it's not as expensive as the Starry Course as moons are easier to come by. 3 of the moons are lesser known, but are within our solar system: Dysnomia, Galatea, and Desdemona. The two more well-known moons will be Oberon and Titania, a pair found on Uranus. Because of their mythology, Titania and Oberon will make this experience even more mystical.</p>
+              <p>The Lovecraft Course 1 consists of one meal to partake in: The Lovecraftian Deity, Nodens. In this fantastical experience we've brought a legendary figure into being through unnamed, likely-illegal, means. This is a once in a life-time opportunity to consume a higher power. Overall, it's a recommended course for fans of Lovecraft.</p>
             </div>
         </div>
 
