--- a/assignment3/page4.html
+++ b/assignment3/page4.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lovecraft Course 1</title>
+    <title>Lovecrft Course 2</title>
     <link rel="stylesheet" href="pages.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Midnight Market: Lovecraft Course 1</h1>
+            <h1>Midnight Market: Lovecraft Course 2</h1>
 
             <div class="links">
                 <div class="items">
@@ -34,6 +34,9 @@
                 <div class="items">
                     <a href="page6.html">Dessert Course</a>
                 </div>
+                <div class="items">
+                    <a href="info.html">More Info</a>
+                </div>
             </div>
             
         </header>
@@ -46,14 +49,13 @@
         <div class="parent">
             <div class="image">
                 <figure>
-                    <img src="images/nodens.png" alt="Vidal Nodens Illustration">
+                    <img src="images/nightgaunt.png" alt="Vidal Nightgaunt Illustration">
                 </figure> 
             </div>
             <div class="text">
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At molestiae nam, similique quo perferendis autem atque saepe aspernatur possimus harum unde. Quaerat commodi porro atque itaque exercitationem maiores animi distinctio?</p>
+              <p>The Lovecraft Course 2 consists of one creature to partake in: A Nightgaunt. Another idea of Lovecraft comes to life as a part of the Midnight Market's Lovecraft series. Nightgaunt is a creature that's well-feared and haunting, making it a dangerous creature. This course is recommended for more casual Lovecraft enjoyers.</p>
             </div>
         </div>
-
     </main>
 
     <footer>
