--- a/assignment3/page5.html
+++ b/assignment3/page5.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dessert Course</title>
+    <title>Slasher Course</title>
     <link rel="stylesheet" href="pages.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Midnight Market: Dessert Course</h1>
+            <h1>Midnight Market: Slasher Course</h1>
 
             <div class="links">
                 <div class="items">
@@ -34,6 +34,9 @@
                 <div class="items">
                     <a href="page6.html">Dessert Course</a>
                 </div>
+                <div class="items">
+                    <a href="info.html">More Info</a>
+                </div>
             </div>
             
         </header>
@@ -46,11 +49,11 @@
         <div class="parent">
             <div class="image">
                 <figure>
-                    <img src="images/miniature.jpg" alt="Vidal Miniature Photography">
+                    <img src="images/brahms.png" alt="Vidal Brahms Illustration">
                 </figure> 
             </div>
             <div class="text">
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At molestiae nam, similique quo perferendis autem atque saepe aspernatur possimus harum unde. Quaerat commodi porro atque itaque exercitationem maiores animi distinctio?</p>
+              <p>The Slasher Course, as described by the title itself, focuses on fictional serial killers to partake in. This is a relatively new course which, depending on the popularity, will gain more courses. This first course, however, will showcase Brahms Heelshire. This course requires you not to wear white for obvious reasons.</p>
             </div>
         </div>
     </main>
