--- a/assignment3/page6.html
+++ b/assignment3/page6.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lovecrft Course 2</title>
+    <title>Dessert Course</title>
     <link rel="stylesheet" href="pages.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Midnight Market: Lovecraft Course 2</h1>
+            <h1>Midnight Market: Dessert Course</h1>
 
             <div class="links">
                 <div class="items">
@@ -34,6 +34,9 @@
                 <div class="items">
                     <a href="page6.html">Dessert Course</a>
                 </div>
+                <div class="items">
+                    <a href="info.html">More Info</a>
+                </div>
             </div>
             
         </header>
@@ -46,11 +49,11 @@
         <div class="parent">
             <div class="image">
                 <figure>
-                    <img src="images/nightgaunt.png" alt="Vidal Nightgaunt Illustration">
+                    <img src="images/miniature.jpg" alt="Vidal Miniature Photography">
                 </figure> 
             </div>
             <div class="text">
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At molestiae nam, similique quo perferendis autem atque saepe aspernatur possimus harum unde. Quaerat commodi porro atque itaque exercitationem maiores animi distinctio?</p>
+              <p>The Dessert Course consists of one large dessert that takes on the appearance of something different. The imagery changes every week, but in this week we have a miniature house made from white molding chocolate, milk chocolate cake, and sugar sculpted plants.</p>
             </div>
         </div>
     </main>
