--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="bio.html">Bio</a></li>
                 <li><a href="assignment1/index.html">Assignment 1</a></li>
-                <li><a href="assignment2/index.html">Assignment 2</a></li>
+                <li><a href="index.html">Assignment 2</a></li>
                 <li><a href="assignment3/index.html">Assignment 3</a></li>
                 <li><a href="assignment4/index.html">Assignment 4</a></li>
                 <li><a href="assignment5/index.html">Assignment 5</a></li>
