--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -45,6 +45,8 @@
         <p class="p7">The color violet is the seventh color of the rainbow. A mix of blue and red.</p>
         
         <div class="moon">
+            <p>Please don't touch the moon...</p>
+
              <figure>
                 <img src="images/moon.png" alt="Image to animate">
             </figure>
