--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -45,20 +45,20 @@
 
         <button onclick="myFunction()">Click for Insight:</button>
 
-        <section id="hidden">
+        <section id="hidden" style="display:none">
             <p id="Hide">As someone who's been listening to GHOST for a while, I hope that I'm finally able to attend their concert this year on August 15th. Ticketmaster, unfortunately, is a pain and I'm getting taxed twice for tickets because of the fees that I never asked to have so I have to save a bit more money... I think it's fairly ridiculous that I have to pay another half the price of my tickets because of assorted fees and taxes.</p>
         </section>
 
         <button onclick="myImg()">Is this a button to see Cardi?</button>
 
 
-        <figure id="hiddenimg">
+        <figure id="hiddenimg" style="display:none">
             <img src="images/copia.png" alt="Vidal GHOST Illustration">
         </figure>
 
         <button onclick="song()">Your beauty never, ever, scared me</button>
 
-        <figure id="audio">
+        <figure id="audio" style="display:none">
             <figcaption>Mary on a Cross</figcaption>
             <br>
             <audio
