--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="assignment5/index.html">Assignment 5</a></li>
                 <li><a href="assignment6/index.html">Assignment 6</a></li>
                 <li><a href="final-project/docs/TopicProposal.pdf">Topic Proposal</a></li>
-                <li><a href="final-project/docs/">Research Interviews</a></li>
+                <li><a href="final-project/docs/Interviews.pdf">Research Interviews</a></li> 
                 <li><a href="final-project/docs/">Creative Exploration</a></li>
                 <li><a href="final-project/docs/">Wireframe + Style Guide</a></li>
                 <li><a href="final-project/docs/">Reflection</a></li>
