--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li><a href="assignment6/index.html">Assignment 6</a></li>
                 <li><a href="final-project/docs/TopicProposal.pdf">Topic Proposal</a></li>
                 <li><a href="final-project/docs/Interview3.pdf">Research Interviews</a></li> 
-                <li><a href="final-project/docs/">Creative Exploration</a></li>
+                <li><a href="final-project/docs/Creative_Exploration.pdf">Creative Exploration</a></li>
                 <li><a href="final-project/docs/">Wireframe + Style Guide</a></li>
                 <li><a href="final-project/docs/">Reflection</a></li>
                 <li><a href="final-project/index.html">Completion</a></li> 
