--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
                 <li><a href="final-project/docs/TopicProposal.pdf">Topic Proposal</a></li>
                 <li><a href="final-project/docs/Interview3.pdf">Research Interviews</a></li> 
                 <li><a href="final-project/docs/CreativeExploration.pdf">Creative Exploration</a></li>
-                <li><a href="final-project/docs/">Wireframe + Style Guide</a></li>
+                <li><a href="final-project/docs/Wireframes.pdf">Wireframe + Style Guide</a></li>
                 <li><a href="final-project/docs/">Reflection</a></li>
                 <li><a href="final-project/index.html">Completion</a></li> 
             </ul>
         </nav>
-
+ 
         <br> 
         <br>
 
