--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li><a href="final-project/docs/CreativeExploration.pdf">Creative Exploration</a></li>
                 <li><a href="final-project/docs/Wireframes.pdf">Wireframe + Style Guide</a></li>
                 <li><a href="final-project/index.html">Website Draft</a></li>
-                <li><a href="final-project/docs/">Reflection</a></li>
+                <li><a href="final-project/docs/Reflection.pdf">Reflection</a></li>
                 <li><a href="final-project/index.html">Completion</a></li> 
             </ul>
         </nav>
