--- a/final-project/index.html
+++ b/final-project/index.html
@@ -51,5 +51,7 @@
     <footer>
         <h2>&copy; Vidal 2023</h2>
     </footer>
+
+    <a href="#top" class="back-to-top">&uarr;</a>
     
 </body>
