--- a/final-project/about.html
+++ b/final-project/about.html
@@ -12,14 +12,16 @@
 <body>
     <div id="wrapper">
         <header>
-            <h1>Solomon Vidal</h1>
-            <h2>Feel the Music</h2> 
+            <div class="title">
+                <h1>Solomon Vidal</h1>
+                <img class="titlelogo" src="images/logo.png" alt="Logo">
+            </div>
+
             <nav>
                 <div class="links">
                     <a href="index.html">Home</a>
-                    <a href="about.html">About</a>
                     <a href="interviews.html">Interviews</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="reflection.html">Reflection</a>
                 </div>
              </nav>
         </header>
@@ -31,7 +33,7 @@
         
             <div class="flexbox">
                 <div class="music">
-                    <img src="images/logo.png" alt="Feel The Music Logo">
+                    <img src="images/truelogo.png" alt="Feel The Music Logo">
                 </div>
                 <div class="feel-the-music-text">
                     <h3>About this Project:</h3>
