--- a/final-project/interviews.html
+++ b/final-project/interviews.html
@@ -29,6 +29,8 @@
 
         <main>
             <div class="flexbox">
+                <h2>Who is 'Feeling the Music'?</h2>
+
                 <div class="music">
                     <figure>
                         <img src="images/ee.jpg" alt="Escanilla">
