--- a/final-project/index.html
+++ b/final-project/index.html
@@ -29,7 +29,7 @@
 
         <div class="flexbox">
             <div class="music">
-                <img src="images/truelogo.png" alt="Feel The Music Logo">
+                <img src="images/eye.jpg" alt="Feel The Music Logo">
             </div>
             <div class="feel-the-music-text">
                 <h3>What is "Feeling the Music"?</h3>
